added entities, mappers, services
